@@ -1,16 +1,13 @@
 package pages;
 
+import org.openqa.selenium.By;
 import org.openqa.selenium.WebDriver;
 import org.openqa.selenium.WebElement;
-import org.openqa.selenium.support.FindBy;
 import java.util.List;
 
 public class CartPage extends BasePage {
-    @FindBy(css = "input.qty-input")
-    private List<WebElement> quantityInputs;
-
-    @FindBy(css = "button.update-cart-button")
-    private WebElement updateCartButton;
+    private final By quantityInputs = By.xpath("//input[contains(@class, 'js-buy-quantity')]");
+    private final By updateCartButton = By.xpath("//button[contains(@class, 'update-cart-button')]");
 
     public CartPage(WebDriver driver) {
         super(driver);
@@ -18,21 +15,45 @@ public class CartPage extends BasePage {
 
     public int getFirstItemQuantity() {
         waitForPageLoad();
-        if (!quantityInputs.isEmpty()) {
-            return Integer.parseInt(quantityInputs.get(0).getAttribute("value"));
+        waitForElementToBeVisible(quantityInputs);
+        List<WebElement> inputs = driver.findElements(quantityInputs);
+
+        if (!inputs.isEmpty()) {
+            WebElement firstInput = inputs.getFirst();
+            String value = firstInput.getAttribute("value");
+            if (value == null || value.isEmpty()) {
+                System.out.println("❌ Quantity value is empty or null");
+                throw new RuntimeException("Quantity value is empty or null - Check if quantity field is properly loaded");
+            }
+            try {
+                return Integer.parseInt(value);
+            } catch (NumberFormatException e) {
+                System.out.println("❌ Invalid quantity value: " + value);
+                throw new RuntimeException("Invalid quantity value: " + value);
+            }
         }
-        throw new RuntimeException("No items in cart");
+        System.out.println("❌ No items found in cart");
+        throw new RuntimeException("No items found in cart - Please check if items were added correctly");
     }
 
     public void setFirstItemQuantity(int quantity) {
         waitForPageLoad();
-        if (!quantityInputs.isEmpty()) {
-            WebElement qtyInput = quantityInputs.get(0);
+        waitForElementToBeVisible(quantityInputs);
+        List<WebElement> inputs = driver.findElements(quantityInputs);
+
+        if (!inputs.isEmpty()) {
+            WebElement qtyInput = inputs.getFirst();
+            waitForElementToBeClickable(qtyInput);
             qtyInput.clear();
             qtyInput.sendKeys(String.valueOf(quantity));
-            updateCartButton.click();
+
+            WebElement updateButton = driver.findElement(updateCartButton);
+            waitForElementToBeClickable(updateButton);
+            updateButton.click();
+            System.out.println("✅ Successfully updated quantity to: " + quantity);
         } else {
-            throw new RuntimeException("No items in cart");
+            System.out.println("❌ No items found in cart");
+            throw new RuntimeException("No items found in cart - Please check if items were added correctly");
         }
     }
 }
